<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="20dp"
        android:id="@+id/txt_schedule_title"
        android:text="@string/schedule_list_item_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_schedule_title"
        android:layout_below="@id/txt_schedule_title"
        android:id="@+id/txt_schedule_description"
        android:text="@string/schedule_list_item_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/txt_schedule_title"
        android:id="@+id/txt_schedule_date"
        android:text="@string/schedule_list_item_datetime" />
</RelativeLayout>