<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:background="@color/gray"
    tools:context=".Interfaces.About">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:background="@color/white"
            >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/iv_about_logo"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/lbl_about_message"
                android:layout_below="@id/iv_about_logo"
                android:text="@string/about_message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:id="@+id/lbl_about_dev_team"
                android:layout_below="@id/lbl_about_message"
                android:layout_centerHorizontal="true"
                android:text="@string/dev_team" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_about_dev_1"
                android:layout_below="@id/lbl_about_dev_team"
                android:layout_centerHorizontal="true"
                android:text="@string/dev_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lbl_about_dev_2"
                android:layout_below="@id/lbl_about_dev_1"
                android:layout_centerHorizontal="true"
                android:text="@string/dev_2" />

        </RelativeLayout>

    </ScrollView>
</FrameLayout>