<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interfaces.Schedule.ScheduleCreate"
    android:padding="20dp"
    android:background="@color/gray"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_schedule_create_date"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_create_date"
                android:id="@+id/lbl_schedule_create_date"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_schedule_create_date_time"
                android:textColor="@color/black"
                android:theme="@style/Base.Theme.AMEI.blackWhite"
                android:text="@string/schedule_create_button_date"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_schedule_create_title"
            android:layout_below="@+id/ll_schedule_create_date"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_create_title"
                android:id="@+id/lbl_schedule_create_title"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_schedule_create_title"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/ll_schedule_create_description"
            android:layout_below="@+id/ll_schedule_create_title"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_create_description"
                android:id="@+id/lbl_schedule_create_description"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txt_schedule_create_description"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:id="@+id/btn_schedule_create_save"
            android:text="@string/schedule_create_button_save"/>
    </LinearLayout>

</RelativeLayout>