<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interfaces.Login"
    android:padding="50dp">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/iv_login_logo"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_login"
        android:layout_below="@id/iv_login_logo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_user"
            android:id="@+id/lbl_login"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_login_login"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_password"
        android:layout_below="@id/ll_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:id="@+id/lbl_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_login_password"
            android:inputType="textPassword"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ll_error_message"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ll_password">

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/login_error_msg"
            android:textColor="@color/red"
            android:id="@+id/lbl_login_error_message"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_button_login"
        android:layout_below="@id/ll_error_message"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login_login"
            android:background="@color/gray"
            android:text="@string/login_button_login"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_button_signup"
        android:layout_below="@id/ll_button_login"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup"
            android:background="@color/gray"
            android:text="@string/login_button_signup"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>