<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interfaces.SignUp"
    android:padding="50dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/iv_login_logo"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_signup_cnpj"
        android:layout_centerInParent="true"
        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_document"
            android:id="@+id/lbl_signup_cnpj"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_signup_cnpj"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_fetch_cnpj"
        android:layout_below="@id/ll_signup_cnpj"
        android:layout_centerInParent="true"
        android:paddingBottom="40dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_fetch_document"
            android:text="@string/signup_button_document"
            android:textColor="@color/white"
            android:background="@color/gray"
            android:layout_weight="1"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_signup_password"
        android:layout_below="@id/ll_signup_cnpj"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_password"
            android:id="@+id/lbl_signup_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_signup_password"
            android:inputType="textPassword"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_signup_signup"
        android:layout_below="@id/ll_signup_password"
        android:layout_centerInParent="true"
        android:visibility="invisible">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup_signup"
            android:textColor="@color/white"
            android:background="@color/gray"
            android:text="@string/signup_button_signup"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>